# obs-streamlabels-plugin

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
data/locale/: en-US.ini
src/: api-client.cpp  api-client.h  plugin-main.cpp  settings.cpp  settings.h  streamlabel-source.cpp  streamlabel-source.h  train-logic.cpp  train-logic.h  websocket-client.cpp  websocket-client.h
